--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header {
 }
 
 .img-1{
-    background-image: url(image\ 1.png);
+    background-image: url(Assets/image\ 1.png);
     height: 100vh;
     background-size: cover;
     background-attachment: fixed;
