--- a/style.css
+++ b/style.css
@@ -44,8 +44,18 @@ header {
     background-image: url(Assets/image\ 1.png);
     height: 100vh;
     background-size: cover;
-    background-attachment: fixed;
     background-position-x: center;
     background-position-y: center;
     background-repeat: no-repeat;
+    margin-bottom: 20px;
+}
+
+.img-2{
+    background-image: url(Assets/image\ 2.png);
+    height: 100vh;
+    background-size: cover;
+    background-position-x: center;
+    background-position-y: center;
+    background-repeat: no-repeat;
+    margin-bottom: 20px;
 }
