divisao de partes

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* parte do kill */
 *{
 padding: 0;
 margin: 0;
@@ -59,3 +60,22 @@ header {
     background-repeat: no-repeat;
     margin-bottom: 20px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* parte do kill */
