--- a/style.css
+++ b/style.css
@@ -58,18 +58,20 @@ header {
     background-position-x: center;
     background-position-y: center;
     background-repeat: no-repeat;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
-
-
-
-
-
-
-
-
-
+.img-3{
+    background-image: url(Assets/image\ 3.png);
+    height: 100vh;
+    background-size: cover;
+    background-position-x: center;
+    background-position-y: center;
+    background-repeat: no-repeat;
+    margin-left: 70px;
+    margin-right: 70px;
+    margin-bottom: 50px;
+}
 
 
 
