--- a/style.css
+++ b/style.css
@@ -18,10 +18,8 @@ header {
 }
 
 .logo {
-    font-size: 32px;
-    margin: 0;
-    color: black;
     text-decoration: none;
+    color: black;
 }
 
 .menu {
@@ -81,13 +79,9 @@ header {
     padding: 20px;
 }
 
-.p-left{
-    margin-right: 300px;
-    padding: 1%;
-}
-
+.p-left,
 .p-right{
-    margin-right: 200px;
+    width: 45%;
 }
 
 
