--- a/style.css
+++ b/style.css
@@ -6,9 +6,46 @@ box-sizing: border-box;
 outline: 0;
 background-color: #e5e5e5e5;
 }
+
 header {
     background-color: #e6e6e6;
     padding: 10px 20px;
+}
+
+h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;          /* SemiBold */
+    font-size: 64px;
+    line-height: normal;       /* AUTO */
+}
+
+
+h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;          /* SemiBold */
+    font-size: 48px;
+    line-height: normal;       /* AUTO */
+}
+
+.header-text {
+    font-family: 'Archivo', sans-serif;
+    font-weight: 600;          /* SemiBold */
+    font-size: 24px;           /* Cabeçalho */
+    line-height: 96px;         /* Altura → 96 */
+    margin-bottom: 0;          /* Espaçamento → 0% */
+}
+
+p {
+    font-family: 'Playfair Display', serif;
+    font-weight: 400;          /* Regular */
+    font-size: 24px;
+    line-height: 130%;         /* 30% acima → 24 * 1.3 */
+}
+
+button {
+    font-family: 'Archivo', sans-serif;
+    font-weight: 600;          /* SemiBold */
+    font-size: 24px;
 }
 
 .navbar {
