--- a/style.css
+++ b/style.css
@@ -48,6 +48,16 @@ button {
     font-size: 24px;
 }
 
+h1.logo {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 64px;
+    line-height: normal;
+    text-decoration: none;
+    color: inherit;
+}
+
+
 .navbar {
     display: flex;
     justify-content: space-between; 
