--- a/style.css
+++ b/style.css
@@ -12,6 +12,15 @@ header {
     padding: 10px 20px;
 }
 
+.navbar > a {
+    all: unset;        /* Remove TODO estilo de link/botão */
+    cursor: pointer;   /* Mantém apenas o clique */
+}
+
+.navbar > a .logo {
+    color: black;      /* Garante que o texto fique normal */
+}
+
 h1 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;          /* SemiBold */
@@ -46,15 +55,6 @@ button {
     font-family: 'Archivo', sans-serif;
     font-weight: 600;          /* SemiBold */
     font-size: 24px;
-}
-
-h1.logo {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    font-size: 64px;
-    line-height: normal;
-    text-decoration: none;
-    color: inherit;
 }
 
 
