--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ outline: 0;
 background-color: #e5e5e5e5;
 }
 
+html {
+    -webkit-text-size-adjust: 100%; /* Impede aumento automático do texto */
+    text-size-adjust: 100%;
+}
+
+
 header {
     background-color: #e6e6e6;
     padding: 10px 20px;
