--- a/style.css
+++ b/style.css
@@ -6,63 +6,10 @@ box-sizing: border-box;
 outline: 0;
 background-color: #e5e5e5e5;
 }
-
-html {
-    -webkit-text-size-adjust: 100%; /* Impede aumento automático do texto */
-    text-size-adjust: 100%;
-}
-
-
 header {
     background-color: #e6e6e6;
     padding: 10px 20px;
 }
-
-.navbar > a {
-    all: unset;        /* Remove TODO estilo de link/botão */
-    cursor: pointer;   /* Mantém apenas o clique */
-}
-
-.navbar > a .logo {
-    color: black;      /* Garante que o texto fique normal */
-}
-
-h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;          /* SemiBold */
-    font-size: 64px;
-    line-height: normal;       /* AUTO */
-}
-
-
-h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;          /* SemiBold */
-    font-size: 48px;
-    line-height: normal;       /* AUTO */
-}
-
-.header-text {
-    font-family: 'Archivo', sans-serif;
-    font-weight: 600;          /* SemiBold */
-    font-size: 24px;           /* Cabeçalho */
-    line-height: 96px;         /* Altura → 96 */
-    margin-bottom: 0;          /* Espaçamento → 0% */
-}
-
-p {
-    font-family: 'Playfair Display', serif;
-    font-weight: 400;          /* Regular */
-    font-size: 24px;
-    line-height: 130%;         /* 30% acima → 24 * 1.3 */
-}
-
-button {
-    font-family: 'Archivo', sans-serif;
-    font-weight: 600;          /* SemiBold */
-    font-size: 24px;
-}
-
 
 .navbar {
     display: flex;
@@ -151,33 +98,89 @@ button {
     color: rgba(102, 100, 100, 0.767);
 }
 
-.container-all{
+
+.container-all {
     display: flex;
-    text-align: start;
+    width: 100%;
+    height: 100vh;
 }
 
-.container-left{
-    display: flex;
-   
-}
-
-.container-right{
-    display: flex;
-   
-}
 
 .left {
     width: 50%;
+    display: flex;
+    flex-direction: column;
 }
 
 .left img {
     width: 100%;
-    display: block; 
+    height: auto;
+    object-fit: cover;
 }
+
 
 .right {
     width: 50%;
-    padding: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.title-bags {
+    width: 70%;
+    text-align: center;
+}
+
+
+.title-bags > h2 {
+    font-weight: 700;
+    font-size: 16px;
+    margin-bottom: 8px;
+}
+
+
+.paragrafo-bags {
+    font-size: 13px;
+    color: #444;
+    margin-bottom: 5px;
+}
+
+
+.paragrafo-bags-2 {
+    font-size: 11px;
+    margin-top: 5px;
+    color: #555;
+}
+
+
+.paragrafo-bags-3 {
+    font-size: 11px;
+    color: #777;
+    margin-bottom: 30px;
+}
+
+
+.divisor {
+    width: 100%;
+    height: 1px;
+    background-color: #d6d6d6;
+    margin: 18px 0;
+}
+
+
+.itens {
+    display: flex;
+    justify-content: space-between;
+    font-size: 13px;
+    color: #333;
+}
+    
+
+.seta {
+    font-size: 12px;
+    color: #333;
+    transform: translateY(1px);
 }
 
 
