--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ button {
 }
 
 
-.divisor {
+.divisor-3{
     width: 100%;
     height: 1px;
     background-color: #d6d6d6;
@@ -231,121 +231,13 @@ button {
     transform: translateY(1px);
 }
 
-/* Container geral lado a lado */
-.form-wrapper {
-    display: flex;
+
+.container-explore{
+    margin-top: 10px;
+    margin-bottom: 30px;
+    margin-left: 50px;
     justify-content: center;
-    align-items: flex-start;
-    gap: 60px;
-    width: 100%;
-    padding: 40px 0;
-    max-width: 1200px;
-    margin: auto;
 }
-
-
-/* ==========================
-   ESQUERDA — FORMULÁRIO
-   ========================== */
-.formulario {
-    width: 420px;
-    position: relative;
-}
-
-.formulario h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 28px;
-    font-weight: 700;
-    margin-bottom: 20px;
-}
-
-.informacao-necessaria {
-    font-size: 12px;
-    color: #7a7a7a;
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-
-
-
-/* CONTEÚDO PRINCIPAL */
-.container-form {
-    display: flex;
-    justify-content: space-between;
-    padding: 50px 40px;
-}
-
-/* FORMULÁRIO À ESQUERDA */
-.left-form {
-    width: 45%;
-}
-
-.left-form h2 {
-    font-size: 26px;
-    margin-bottom: 10px;
-    font-weight: bold;
-}
-
-.info-obrigatorio {
-    font-size: 12px;
-    color: gray;
-    margin-bottom: 25px;
-    display: block;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-label {
-    font-size: 14px;
-    margin-top: 20px;
-}
-
-input {
-    border: none;
-    border-bottom: 1px solid black;
-    padding: 8px 0;
-    font-size: 15px;
-    outline: none;
-}
-
-button {
-    margin-top: 25px;
-    padding: 10px;
-    background: #333;
-    color: white;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    width: 150px;
-}
-
-/* TEXTO À DIREITA */
-.right-info {
-    width: 40%;
-    padding-top: 20px;
-}
-
-.right-info h3 {
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.right-info ul {
-    margin-top: 15px;
-    margin-left: 20px;
-}
-
-.right-info ul li {
-    margin-bottom: 8px;
-}
-
-
-
-
 
 
 
