--- a/style.css
+++ b/style.css
@@ -153,7 +153,6 @@ button {
     height: 100vh;
 }
 
-
 .left {
     width: 50%;
     display: flex;
@@ -173,7 +172,6 @@ button {
     justify-content: center;
     align-items: center;
 }
-
 
 .title-bags {
     width: 70%;
@@ -237,6 +235,36 @@ button {
     margin-bottom: 30px;
     margin-left: 50px;
     justify-content: center;
+}
+
+.divisor-2{
+    width: 100%;
+    height: 1px;
+    background-color: #494949c1;
+    margin: 18px 0;
+}
+
+.container-explore-2{
+    margin-top: 40px;
+    display: flex;
+    justify-content: ;
+    text-align: start;
+}
+
+.container-ex-left {
+    display: flex;
+    justify-content: left;
+}
+
+.container-ex-left > img{
+    width: 50%;
+    margin-left: 30px;
+}
+
+.container-ex-right{
+    display: flex;
+    justify-content: right;
+
 }
 
 
