--- a/style2.css
+++ b/style2.css
@@ -10,6 +10,12 @@ body {
     color: #333;
 }
 
+.divisor-2 {
+    width: 100%;
+    height: 1px;
+    background-color: #494949c1;
+}
+
 .logo {
     font-size: 24px;
     font-weight: 800;
@@ -106,3 +112,32 @@ body {
     margin-top: -10px;
     font-size: 14px;
 }
+
+
+.input-wrapper {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #000;
+    width: 300px;
+    padding-bottom: 5px;
+    position: relative;
+}
+
+.input-wrapper label {
+    font-size: 14px;
+    margin-right: 10px;
+}
+
+.input-wrapper input {
+    flex: 1;
+    border: none;
+    outline: none;
+    background: transparent;
+    font-size: 14px;
+}
+
+.input-wrapper .arrow {
+    font-size: 19px;
+    margin-left: 10px;
+}
+
