--- a/style.css
+++ b/style.css
@@ -278,16 +278,39 @@ body {
 }
 
 .container-ex-3 {
+     margin-top: 40px;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    padding: 0 50px;
 }
 
-.cota
+.container-ex-left-2{
+    padding-right: 350px;
+}
+
+.container-ex-right-2{
+    margin-right: 100px;
+}
+
+.container-ex-left-2 > h3{
+    font-size: 17px;
+    margin-bottom: 20px;
+}
 
 .container-ex-left-2 > p{
     font-size: 15px;
-    line-height: 1.4;
+    margin-bottom: 30px;
+}
+
+.container-ex-right-2 > p{
+    font-size: 15px;
+    margin-bottom: 20px;
+}
+
+.container-ex-right-2 > h3{
+    font-size: 17px;
+    margin-bottom: 20px;
 }
 
 .input-wrapper {
@@ -297,6 +320,7 @@ body {
     width: 300px;
     padding-bottom: 5px;
     position: relative;
+    margin-bottom: 20px;
 }
 
 .input-wrapper label {
@@ -317,6 +341,20 @@ body {
     margin-left: 10px;
 }
 
+.footer-explore{
+    text-align: center;
+}
+
+.footer-explore > p{
+    font-size: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.p-explore > p{
+    margin-left: 10px;
+    font-size: 17px;
+}
 
 
 
