comentando (divisao dos comentarios e organizacao)

--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-/* parte do kill */
+
+/* ------------------------------------ css geral ------------------------------------------------- */
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    outline: 0;
+    outline: 0;         
 }
 
 .divisor-2 {
@@ -97,8 +98,9 @@ body {
 .navbar nav a:hover {
     color: #000;
 }
+/* ---------------------------------- css geral ----------------------------------------------- */
 
-/* --------------------------------------------------------------------------------- */
+/* ------------------------------------ index ------------------------------------------------ */
 
 .imagens {
     position: fixed;
@@ -155,6 +157,10 @@ body {
     width: 200px;
 
 }
+
+/* ------------------------------------ index ------------------------------------------------ */
+
+/* ------------------------------------- bags ---------//-------------------------------------- */
 
 .navs {
     padding: 1%;
@@ -243,6 +249,9 @@ body {
     transform: translateY(1px);
 }
 
+/* ------------------------------------- bags ----------------------------------------------- */
+
+/* -------------------------------------- explore ----------------------------------------------- */
 
 .container-explore {
     margin-top: 10px;
@@ -359,6 +368,10 @@ body {
     margin-left: 10px;
     font-size: 17px;
 }
+
+/* -------------------------------------- explore ----------------------------------------------- */
+
+/* ------------------------------------- formulario ----------------------------------------------- */
 
 .container-form {
     display: flex;
@@ -520,12 +533,14 @@ p {
     padding: 1%;
 }
 
+/* ---------------------------------- formulario ---------------------------------------- */
+
+/* -------------------------------- banner de novidades ---------------------------------- */
 .banner img {
     width: 100%;
     display: block;
 }
 
-/* GRID -------------------------------------- */
 .grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -538,41 +553,3 @@ p {
     display: block;
     margin-top: 20px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* parte do kill */
-
-/* parte do masseto */
